# orderbook-replayer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
scripts/: start_server.bat  start_server.sh
src/backend/: halfbook.py  ob_replayer_backend.py  orderbook.py  orderbook_processor.py  orderbook_traverser.py  start_backend.sh
src/backend/helpers/: logger.py
src/frontend/: app.js  index.html  package.json
tests/: test_fpcache.py  test_halfbook.py
tmp/: compress_orderbook.py
