[tool.poetry]
name = "orderbook-replayer"
version = "0.1.0"
description = ""
authors = ["David Zakarias <david.zakarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
pandas = "^2.2.3"
termcolor = "^2.5.0"
sortedcontainers = "^2.4.0"
aiofiles = "^24.1.0"
pytest = "^8.3.4"
line-profiler = "^4.2.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 144
skip-string-normalization = true
skip-magic-trailing-comma = true
target-version = ['py311']
